--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input type="text" placeholder="last name" name="last name" required>
     <input type="email" placeholder="email" name="email" required>
     <input type="password" placeholder="password" name="password" required>
+    <input type="confrim password" placeholder="confrim password" name=" confrim password" required>
     <button>send</button>
     </form>
 </body>
